--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 body {
   margin: 0;
+  font-family: 'Roboto Mono', monospace;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+:root {
+  --base-color: #1c2b2d;
+  --gradient-1: #1f6f8b;
+  --gradient-2: #99a8b2;
+  --gradient-3: #e6d5b8;
 }
 
 code {
