--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-/* Custom properties/variables  */
 :root {
   --main-white: #f0f0f0;
   --main-red: #be3144;
@@ -21,29 +20,9 @@
 
 html {
   box-sizing: border-box;
-
-  /* Set font size for easy rem calculations
-     * default document font size = 16px, 1rem = 16px, 100% = 16px
-     * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
-    */
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
-
-/* A few media query to set some font sizes at different screen sizes.
-   * This helps automate a bit of responsiveness.
-   * The trick is to use the rem unit for size values, margin and padding.
-   * Because rem is relative to the document font size
-   * when we scale up or down the font size on the document
-   * it will affect all properties using rem units for the values.
-  */
-
-/* I am using the em unit for breakpoints
-   * The calculation is the following
-   * screen size divided by browser base font size
-   * As an example: a breakpoint at 980px
-   * 980px / 16px = 61.25em
-  */
 
 /* 1200px / 16px = 75em */
 @media (max-width: 75em) {
@@ -114,7 +93,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  background: var(--main-red);
+  background: #2c3e50;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
   z-index: 10;
 }
@@ -146,18 +125,17 @@ img {
 
 /* Welcome section */
 
-.welcome-section {
+.home-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: #000;
-  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+  background-color: #18bc9c;
 }
 
-.welcome-section > p {
+.home-section > p {
   font-size: 3rem;
   font-weight: 200;
   font-style: italic;
@@ -295,6 +273,8 @@ img {
 }
 
 .contact-details {
+  display: flex;
+  flex-direction: row;
   font-size: 2.4rem;
   text-shadow: 2px 2px 1px #1f1f1f;
   transition: transform 0.3s ease-out;
@@ -302,6 +282,7 @@ img {
 
 .contact-details:hover {
   transform: translateY(8px);
+  cursor: pointer;
 }
 
 /* Footer */
