--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @import url(https://fonts.googleapis.com/css?family=Roboto:900|Roboto+Mono:300,400,700); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 :root {
   --main-white: #f0f0f0;
   --main-red: #be3144;
@@ -48,7 +51,7 @@ html {
 /* Base styles */
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   font-size: 1.8rem; /* 18px */
   font-weight: 400;
   line-height: 1.4;
@@ -57,7 +60,7 @@ body {
 
 h1,
 h2 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   font-weight: 700;
   text-align: center;
 }
